# quality-oracle

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt  server.json
.github/workflows/: cicd.yaml
dev/: judge_baseline.py  judge_gold_standard.json  run_e2e_eval.py  scan_servers.py
dev/mock-mcp-server/: Dockerfile  README.md  server.py
dev/question-generation/: generate_questions.py
dev/seed-questions/: code.json  data.json  defi.json  general.json  search.json
docs/: AGENT_BATTLES_VIRAL_PLAYBOOK.md  DEMO_TALKING_POINTS.md  DISTRIBUTION_ROADMAP.md  IMPLEMENTATION_PLAN.md  MATCHMAKING_AND_FAIRNESS_RESEARCH.md  VIRAL_COMPETITION_RESEARCH.md
docs/specs/: AWESOME_LIST_PR.md  DIRECTORY_SUBMISSIONS.md  FRAMEWORK_INTEGRATIONS.md  HACKATHON_PITCH.md  NIST_CONCEPT_PAPER.md  PARTNERSHIP_OUTREACH.md
mcp-server/: README.md  pyproject.toml  server.py
src/: config.py  main.py
src/api/: agent_card.py
src/auth/: api_keys.py  dependencies.py  rate_limiter.py
src/core/: adversarial.py  attestation.py  battle.py  cancellation.py  consensus_judge.py  correlation.py  eval_mode.py  (+13 more)
tests/: conftest.py  test_a2a_extension.py  test_a2a_integration.py  test_api.py  test_attestation.py  test_battle.py  test_battle_api.py  test_battle_cards.py  test_bt_ranking.py  test_divisions.py  test_e2e_gaps.py  test_evaluator.py  test_irt.py  test_irt_api.py  test_ladder.py  test_ladder_api.py  test_matchmaking.py  test_mcp_client.py  test_mcp_server.py  test_process_quality.py  test_question_pools.py  test_rankings_api.py  test_rate_limiter.py  test_rating.py  test_scoring.py  test_streaming.py  test_test_generator.py  test_x402.py
(+22 files in other folders)
