[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-agenttrust"
version = "0.1.0"
description = "AgentTrust MCP Server — verify AI agent and MCP server quality from your IDE"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Assisterr", email = "team@assisterr.ai"},
]
keywords = ["mcp", "ai-agents", "quality", "evaluation", "verification", "trust"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.3.0",
    "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/vitaliiserbynassisterr/quality-oracle"
Repository = "https://github.com/vitaliiserbynassisterr/quality-oracle"
Documentation = "https://github.com/vitaliiserbynassisterr/quality-oracle/blob/main/docs/ARCHITECTURE.md"

[project.scripts]
mcp-agenttrust = "server:main"
